[V5] fix text align

--- a/src/pages/v5/_components/Hero/index.module.scss
+++ b/src/pages/v5/_components/Hero/index.module.scss
@@ -64,6 +64,7 @@
 .info {
 	@media (max-width: u.Rem(500px)) {
 		margin-top: u.Rem(16px);
+		text-align: center;
 	}
 
 	> a {
